# atlas_research_system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  pytest.ini
backend/app/: config.py  main.py
backend/app/api/routes/: data.py  health.py  history.py  llm.py  orchestrator.py  plan.py  research.py
backend/app/core/: database.py  datetime_utils.py  execution_repository.py  logging.py  middleware.py  orchestrator.py  redis_client.py  state_manager.py  tracing.py
backend/app/core/agents/: data.py  planner.py  research.py  synthesis.py
backend/app/core/llm/: base.py  echo.py  factory.py  ollama.py  retry.py
backend/app/core/prompts/: __init__.py  base.py  data.py  planner.py  research.py  synthesis.py
backend/app/core/tools/: __init__.py  base.py  python_executor.py  sql_query.py  web_scraper.py  web_search.py
backend/app/models/: __init__.py  execution.py  task.py
backend/app/schemas/: base.py  data.py  history.py  llm.py  orchestrator.py  plan.py  research.py
backend/scripts/: generate_agent_docs.py  init_db.py
backend/tests/: conftest.py  test_api.py  test_data_agent.py  test_llm_provider.py  test_observability.py  test_orchestrator.py  test_planner.py  test_research.py  test_state_manager.py  test_synthesis.py  test_tools.py  test_tracing.py
docs/: arqutecture.md  data_graph.md  development_log.md  execution_db.md  orchestrator_graph.md  planner_graph.md  research_graph.md
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  StatusBadge.tsx  TaskForm.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: HomePage.tsx  TaskDetailPage.tsx  TaskListPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
scripts/: generate_requirements.sh
