[project]
name = "atlas-research-system"
version = "0.1.0"
description = "Development of a AI research multiagent system from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
