[project]
name = "atlas-research-system"
version = "0.1.0"
description = "Development of a AI research multiagent system from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "colorlog>=6.10.1",
    "ddgs>=9.14.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.4.2",
    "langgraph>=1.2.4",
    "mypy>=2.3.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "redis>=8.0.0",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "uvicorn>=0.48.0",
]


[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true
